security/sg.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security stack which provides EKS cluster and worker groups with permissions and encryption 

# Stack Parameters 
Parameters:
  vpc0id:
    Type: String
  GitLabALBSecurityGroup:
    Type: String
# Tag parameters 
  owner: 
    Type: String
  ownerEmail: 
    Type: String
  environment: 
    Type: String
    AllowedValues: 
      - production
      - development
  project: 
    Type: String

Resources:
  clusterSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: EKS cluster security group 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref managerSecurityGroup # you don't need ingress rules to access the cluster and issue kube commands 
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name 
          Value: !Join ['-', [!Ref 'AWS::StackName', EKS-cluster-sg ]]
        - Key: owner
          Value: !Ref owner
        - Key: OwnerEmail 
          Value: !Ref ownerEmail
        - Key: Environment 
          Value: !Ref environment 
        - Key: project 
          Value: !Ref project 
      VpcId: !Ref vpc0id

  managerSecurityGroup: 
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: EC2 manager security group 
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/8  # or specific CIDR for EKS ENIs 
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0  # open outbound for access to AWS CLI and Kubeclt download (could probably be restricted) also allows connection to SSM
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref GitLabALBSecurityGroup
      Tags: 
        - Key: Name 
          Value: !Join ['-', [!Ref 'AWS::StackName', EC2-manager-sg ]]
        - Key: owner
          Value: !Ref owner
        - Key: OwnerEmail 
          Value: !Ref ownerEmail
        - Key: Environment 
          Value: !Ref environment 
        - Key: project 
          Value: !Ref project 
      VpcId: !Ref vpc0id

Outputs: 
  clusterSGid: 
    Value: !Ref clusterSecurityGroup

  managerSGid: 
    Value: !Ref managerSecurityGroup
